fix(TimePicker): cannot centered input component

--- a/src/components/time-picker/time-picker.scss
+++ b/src/components/time-picker/time-picker.scss
@@ -21,7 +21,7 @@ $active-color: #d0e8fe;
 }
 
 .container--centered {
-  .input {
+  .input input {
     text-align: center;
   }
   .dropdown {
